<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B0A49"
    tools:context=".SetStart">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/go_to_the_first_start_point"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button_next_set"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="50dp"
        android:onClick="next"
        android:text="@string/next_step"
        android:textSize="24sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/n"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_n3" />

    <TextView
        android:id="@+id/text_n3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/coordinates_of_the_first_point"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/text_n"
        app:layout_constraintTop_toTopOf="@+id/text_n" />

    <TextView
        android:id="@+id/text_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_n"
        app:layout_constraintTop_toTopOf="@+id/text_e2" />

    <TextView
        android:id="@+id/text_e4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_n"
        app:layout_constraintTop_toTopOf="@+id/text_e3" />

    <TextView
        android:id="@+id/text_e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_n2"
        app:layout_constraintTop_toBottomOf="@+id/text_n" />

    <TextView
        android:id="@+id/text_e3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/text_e4"
        app:layout_constraintTop_toBottomOf="@+id/text_n" />

</androidx.constraintlayout.widget.ConstraintLayout>