<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B0A49"
    tools:context=".Timer">

    <Button
        android:id="@+id/button_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:width="300dp"
        android:height="100dp"
        android:onClick="Load"
        android:textColor="#FFFFFF"
        android:text="@string/end_session"
        android:background="@drawable/custom_button"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_laptime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:onClick="Load"
        android:text="@string/_00_00_00"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/button_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_ovrtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_00_00_002"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delta"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/text_delta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ovrtime" />

    <TextView
        android:id="@+id/text_delta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delta"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="125sp"
        app:layout_constraintBottom_toTopOf="@+id/text_laptime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ovrtime"
        app:layout_constraintVertical_bias="0.587" />

    <TextView
        android:id="@+id/text_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/lap"
        android:textColor="#FAFAFA"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_ovrtime" />

    <TextView
        android:id="@+id/text_lapnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lapnr"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/text_lap"
        app:layout_constraintTop_toTopOf="@+id/text_ovrtime" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="382dp"
        android:layout_height="92dp"
        android:background="@android:color/transparent"
        android:onClick="resetButton"
        android:text="Reset"
        android:textColor="#1B0A49"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_laptime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_delta"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>