<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B0A49"
    tools:context=".Car_settings">

    <ImageView
        android:id="@+id/image_carupfront"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carupfront" />

    <TextView
        android:id="@+id/text_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_the_car_s_toe_angle_deg"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_RL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/rl"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_carupfront"
        app:layout_constraintEnd_toEndOf="@+id/value_RL"
        app:layout_constraintStart_toStartOf="@+id/value_RL" />

    <TextView
        android:id="@+id/text_RR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/rr"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_carupfront"
        app:layout_constraintEnd_toEndOf="@+id/value_RR"
        app:layout_constraintStart_toStartOf="@+id/value_RR" />

    <TextView
        android:id="@+id/text_FL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fl"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/value_FL"
        app:layout_constraintStart_toStartOf="@+id/value_FL"
        app:layout_constraintTop_toTopOf="@+id/image_carupfront" />

    <TextView
        android:id="@+id/text_FR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fr"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/value_FR"
        app:layout_constraintStart_toStartOf="@+id/value_FR"
        app:layout_constraintTop_toTopOf="@+id/image_carupfront" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:width="250dp"
        android:height="90dp"
        android:onClick="Ready"
        android:text="@string/skip_settings"
        android:background="@drawable/custom_button"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toe"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button_toe"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="15dp"
        android:width="150dp"
        android:height="90dp"
        android:onClick="Toe"
        android:text="@string/toe"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button_camber"
        app:layout_constraintTop_toTopOf="@+id/button_camber" />

    <Button
        android:id="@+id/button_camber"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:width="150dp"
        android:height="90dp"
        android:onClick="Camber"
        android:text="@string/camber"
        android:textSize="14sp"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_carupfront" />

    <Button
        android:id="@+id/button_tyrepress"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:width="150dp"
        android:height="90dp"
        android:onClick="Pressure"
        android:text="@string/tyre_press"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/button_camber"
        app:layout_constraintTop_toTopOf="@+id/button_camber" />

    <EditText
        android:id="@+id/value_FL"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-45dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F7F7"
        android:textColorHint="#FBFAFA"
        android:textColorLink="#FFFFFF"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/image_carupfront"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_FL"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/value_RL"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="-45dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F7F7"
        android:textColorHint="#FBFAFA"
        android:textColorLink="#FFFFFF"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/text_RL"
        app:layout_constraintEnd_toStartOf="@+id/image_carupfront"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/value_RR"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="-45dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F7F7"
        android:textColorHint="#FBFAFA"
        android:textColorLink="#FFFFFF"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/value_RL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_carupfront"
        app:layout_constraintTop_toTopOf="@+id/value_RL"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/value_FR"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F7F7"
        android:textColorHint="#FBFAFA"
        android:textColorLink="#FFFFFF"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/value_RR"
        app:layout_constraintTop_toBottomOf="@+id/text_FR"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>